# elf2djgpp

./: .gitignore  .style.yapf  Cargo.toml  LICENSE  README.md  pyproject.toml  rustfmt.toml
elf2djgpp/: binfmt.py  coff_go32.py  main.py
example/: Makefile  build-dos-lib.sh  example.c
example/rust-lib/: Cargo.toml  i586-unknown-none-gnu.json
example/rust-lib/src/: lib.rs
src/: binfmt.rs  coff_go32.rs  main.rs
