[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "elf2djgpp"
version = "0.0.1"
description = "Convert x86 ELF objects to DJGPP COFF-GO32 objects"
authors = [{name = "kvance", email = "kvance@kvance.com"}]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "lief==0.12.3",
]

[project.optional-dependencies]
dev = [
    "yapf==0.32.0",
]

[project.scripts]
elf2djgpp = "elf2djgpp.main:main"

[tool.setuptools]
packages = ["elf2djgpp"]
